FIX: Eye Toggle Overlap Input Box

--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -143,23 +143,6 @@ a{
     transform: scale(1.2);
 }
 
-/* .hero img{
-    margin-left: 2rem;
-    height: 15rem;
-    width: 25vw;
-} */
-
-/* .footer{
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 7rem;
-    width: 100%;
-    background-color:#333333;
-    display: none;
-
-} */
-
 /* Dashboard.php */
 .out-profile-books{
     display: flex;
